--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -46,28 +46,82 @@
   </nav>
   <!-- Section kyc Mode-->
   <div *ngIf='kycMode'>
-    <div class="w3-card w3-round w3-white animated flipInX">
-      <div class="w3-container">
-        <h4 class="w3-center pointer">{{full_name}}</h4>
-        <p class="w3-center pointer">
-          <img [src]="photo" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
-
-        </p>
-        <input #fileImage type="file" (change)="reUploadPhoto(fileImage.files)"
-          class="form-control no-border img-circle" />
-        <span style="font-weight:bold;color:green;" *ngIf="messagePhoto">
-          {{messagePhoto}}
-        </span>
-        <hr>
-        <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme pointer"></i> Role : {{role | titlecase}}</p>
-        <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme pointer"></i> City :{{city}}, {{state_name}}</p>
-        <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme pointer"></i> {{dob}}</p>
-        <p class="pl-40">Account Balance&nbsp;&nbsp;
-          <span>
-            <span>&#8377;</span>
-            <strong>{{balance}}</strong>
-          </span>
-        </p>
+      <!-- <div class="row">
+          <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf='bankDetailsUpdated'>
+              <strong>Success!</strong> Bank details updated successfully.
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+      </div> -->
+    <div class="row" style="background: white">
+      <div class="col-md-3">
+          <div>
+              <p>
+                  <img [src]="photo" style="height:230px; width: 250px;" alt="Avatar" class="image-style">
+              </p>
+              <input #fileImage type="file" (change)="reUploadPhoto(fileImage.files)"
+              class="form-control no-border img-circle" />
+          </div>
+      </div>
+      <div class="col-md-3">
+            <div>
+              <p class="header">Personal Information</p> 
+            </div>
+            <div style="margin-top: 15px">
+                <p><strong>Name :</strong> {{full_name}}</p>
+                <p><strong>Role :</strong> {{role | titlecase}}</p>
+                <p><strong>City :</strong> {{city}}</p>
+                <p><strong>DOB :</strong> {{dob}}</p>
+                <p class="pl-40"><strong>Account Balance: </strong>
+                  <span>
+                    <span>&#8377;</span>
+                    <strong>{{balance}}</strong>
+                  </span>
+                </p>
+            </div>
+            
+      </div>
+      <div class="col-md-6">
+          <p class="header" style="margin-left: 5px;">Banking Info</p>
+          <form [formGroup]="userBankInformationForm">
+              <div class="row">
+                  <div class="col-md-4"><label>Bank Name :</label></div>
+                  <div class="col-md-6">
+                    <input type="text" class="form-control" formControlName='bankName'/>
+                    <small>Bank Name</small>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-4"><label>Branch Name :</label></div>
+                  <div class="col-md-6">
+                    <input type="text" class="form-control" formControlName='branchName'/>
+                    <small>Branch Name</small>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-4"><label>Account Number :</label></div>
+                  <div class="col-md-6">
+                    <input type="text" class="form-control" formControlName='accountNumber'/>
+                    <small>16 digit account number</small>
+                  </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4"><label>IFSC Code :</label></div>
+                    <div class="col-md-6">
+                      <input type="text" class="form-control" formControlName='ifscNumber'/>
+                      <small>IFSC code</small>
+                    </div>
+                    <div class="col-md-2">
+                      <button class="btn btn-primary" 
+                      [disabled]='userBankInformationForm.invalid' (click)='updateUserBankInfo()'>Update</button>
+                    </div>
+                </div>
+                <div class="row" *ngIf='bankDetailsUpdated'>
+                  <label
+                   class="success-text"><strong>Success!</strong> Bank details updated successfully.</label>
+                </div>
+          </form>
       </div>
     </div>
     <hr />
