--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -173,8 +173,8 @@
                 
         </div>
         <div class="row float-right">
-            <button class="btn btn-primary float-right" (click)='updateUserProfileForAdmin()'>Update</button>
-            <button class="btn btn-primary float-right" style="margin-right: 15px" (click)='resetForm()'>Reset</button>
+            <button class="btn btn-primary float-right" style="margin-bottom: 30px;" (click)='updateUserProfileForAdmin()'>Update</button>
+            <button class="btn btn-primary float-right" style="margin-right: 15px; margin-bottom: 30px;" (click)='resetForm()'>Reset</button>
         </div>       
         
     </div>
