--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,9 @@
-<div class="">
+<div>
   <div *ngIf="!statusOnline">
     <img src="assets/images/image_preview.png">
   </div>
   <div *ngIf="statusOnline">
-    <!-- <app-nav-bar></app-nav-bar> -->
-    <!-- Page Container -->
-    <!--  -->
-    <div class="w3-container w3-content" style="max-width:1400px;margin-top:20px">
+    <div class="w3-container w3-content" style="max-width:1400px;margin-bottom: 10px;">
       <router-outlet></router-outlet>
     </div>
   </div>
