--- a/src/app/common-controls/header-control/header-control.component.html
+++ b/src/app/common-controls/header-control/header-control.component.html
@@ -1,20 +1,27 @@
-<div class="row">
-  <div class="col-6">
-    <a href="http://telecharge.biz" class="w3-bar-item w3-button logo-position"><img src="assets/logo/Logo.png"
-        class="logo" style="width: 160px;height: 90px;" alt="Avatar"></a>
+<nav class="navbar navbar-expand-lg">
+  <div class="col-md-4">
+    <a (click)='routeToHome()'>
+        <label class="brand-text">Telecharge</label>
+    </a>
   </div>
-  <div class="col-6">
-    <div class="address float-right">
-      <table>
-        <tr>
-          <td>Customer Support :</td>
-          <td>+91-8100101025(10am to 7pm)</td>
-        </tr>
-        <tr>
-          <td>Support E-mail :</td>
-          <td>support@telecharge.biz(24x7)</td>
-        </tr>
-      </table>
+  <div class="col-md-2">
+      <button class="navbar-toggler" type="button" (click)="toggleNavbar()">
+          <i class="fas fa-angle-double-down" aria-hidden="true">
+              <span class="navbar-toggler-icon" style="color: white;"></span>
+          </i>
+      </button>
+  </div>
+  <div class="col-md-5">
+      <div class="collapse navbar-collapse" [ngClass]="{ 'show': navbarOpen }">
+          <div class="row text-cc" style="float: right;">Customer Support : +91-8100101025(10am to 7pm)</div>
+          <div class="row text-cc" style="float: right;">Support E-mail : support@telecharge.biz(24x7)</div><br/>
+          
     </div>
   </div>
-</div>
+  <div class="col-md-1">
+      <div style="float: right;"><a class="float-right header-item pointer font-large header-item font-size-20" title="Logout"
+        (click)="logout()"><i class="fa fa-sign-out"><label class='text-cc'>Logout</label></i></a></div>
+  </div>
+    
+  </nav>
+  <br/>
