--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,25 +1,6 @@
 
   <div class="w3-row marque-position">
-    <div class="row mb-5">
-      <div class="col-xs-6">
-        <a href="http://telecharge.biz" class="w3-bar-item w3-button logo-position"><img src="assets/logo/Logo.png"
-            class="logo" style="width: 160px;height: 90px;" alt="Avatar"></a>
-      </div>
-      <div class="col-xs-6">
-        <div class="address float-right">
-          <table>
-            <tr>
-              <td>Customer Support :</td>
-              <td>+91-8100101025(10am to 7pm)</td>
-            </tr>
-            <tr>
-              <td>Support E-mail :</td>
-              <td>support@telecharge.biz(24x7)</td>
-            </tr>
-          </table>
-        </div>
-      </div>
-    </div>
+      <app-header-control></app-header-control>
       <div class="row">
           <div class="w3-col m10 pr-17">
               <app-news-slider></app-news-slider>
@@ -37,9 +18,9 @@
   <div class="w3-col m3">
     <!-- Profile -->
     <app-profile></app-profile>
-    <div *ngIf="isSuperAdmin" class="w3-card w3-round w3-white w3-hide-small animated slideInUp">
+    <!-- <div *ngIf="isSuperAdmin" class="w3-card w3-round w3-white w3-hide-small animated slideInUp">
       <app-permission></app-permission><br>
-    </div>
+    </div> -->
     <div *ngIf="isSuperAdmin" class="w3-card w3-round animated slideInUp">
       <app-tds-charge></app-tds-charge><br>
     </div>
