--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,43 +1,13 @@
 <div class="w3-row marque-position">
-  <div class="row">
-    <div class="col-6">
-      <a href="#" class="w3-bar-item w3-button logo-position" routerLink="/dashboard"><img src="assets/logo/Logo.png"
-          class="logo" style="width: 160px;height: 90px;" alt="Avatar"></a>
-    </div>
-    <div class="col-6">
-      <div class="w3-card w3-round w3-white w3-center animated flipInX mb-4 api-balance-position">
-        <!-- Logout -->
-        <a class="w3-bar-item w3-button  w3-right w3-hover-white font-large w3-theme-d2 position mobileshow"
-          title="Logout" (click)="logout()"><i class="fa fa-sign-out pointer"></i></a>
-        <a class="float-right header-item pointer font-large header-item font-size-20" title="Logout"
-          (click)="logout()"><i class="fa fa-sign-out"> Logout</i></a>
-      </div>
-      <div class="address float-right">
-        <table>
-          <tr>
-            <td>Customer Support :</td>
-            <td>+91-8100101025(10am to 7pm)</td>
-          </tr>
-          <tr>
-            <td>Support E-mail :</td>
-            <td>support@telecharge.biz(24x7)</td>
-          </tr>
-        </table>
-      </div>
-    </div>
-  </div>
-
-
-
-
+    <app-header-control></app-header-control>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-link" [ngClass]="{'nav-item active': kycMode}"><a (click)='changeView("KYC")'>KYC information</a>
+        <li class="nav-link nav-link pointer" [ngClass]="{'nav-item active': kycMode}"><a (click)='changeView("KYC")'>KYC information</a>
         </li>
-        <li class="nav-link" [ngClass]="{'nav-item active': infoMode}"><a (click)='changeView("Basic Info")'>Personal
+        <li class="nav-link nav-link pointer" [ngClass]="{'nav-item active': infoMode}"><a (click)='changeView("Basic Info")'>Personal
             Details</a></li>
-        <li *ngIf="isSuperAdmin || isAdmin" class="nav-link" [ngClass]="{'nav-item active': adminMode}"><a
+        <li *ngIf="isSuperAdmin || isAdmin" class="nav-link nav-link pointer" [ngClass]="{'nav-item active': adminMode}"><a
             (click)='changeView("Admin View")'>Admin View</a></li>
         <!-- <li class="nav-link" [ngClass]="{'nav-item active': bankMode}"><a (click)='changeView("Bank Account")'>Bank Account</a></li> -->
         <!-- <li><a href="#">Link</a></li> -->
@@ -45,16 +15,8 @@
     </div>
   </nav>
   <!-- Section kyc Mode-->
-  <div *ngIf='kycMode'>
-      <!-- <div class="row">
-          <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf='bankDetailsUpdated'>
-              <strong>Success!</strong> Bank details updated successfully.
-              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-      </div> -->
-    <div class="row" style="background: white">
+  <div class="container-fluid" *ngIf='kycMode' style="margin-top: 10px;">
+    <div class="row w3-card w3-round w3-white animated flipInX pt-6">
       <div class="col-md-3">
           <div>
               <p>
@@ -124,8 +86,8 @@
           </form>
       </div>
     </div>
-    <hr />
-    <div class="w3-card w3-round w3-white animated flipInX pt-6">
+    <br/>
+    <div class="row w3-card w3-round w3-white animated flipInX pt-6">
       <div class="w3-container">
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
           <h2>KYC Information</h2>
@@ -198,8 +160,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-10 float-right">
-            <div class="form-group float-right">
+          <div class="col-md-10 float-left" style="margin-bottom: 30px;">
+            <div class="form-group float-left">
               <button class="btn btn-primary">Submit</button>
             </div>
           </div>
@@ -209,12 +171,15 @@
   </div>
   <!-- Section End info Mode-->
   <!-- Section admin Mode-->
-  <div *ngIf='adminMode'>
+  <div *ngIf='adminMode' style="margin-top: 10px;">
     <app-all-profile></app-all-profile>
   </div>
   <!-- Section End admin Mode-->
   <!-- Edit Profile -->
-  <app-edit-profile [user]='userDetails' (userEdited)='handleEditUserOutput($event)' *ngIf='infoMode'>
-  </app-edit-profile>
+  <div style="margin-top: 10px;"  *ngIf='infoMode'>
+      <app-edit-profile [user]='userDetails' (userEdited)='handleEditUserOutput($event)'>
+        </app-edit-profile>
+  </div>
+  
   <!-- End Edit Profile -->
 </div>
