--- a/src/styles.css
+++ b/src/styles.css
@@ -12,10 +12,10 @@ body {
    position:relative;
 }
 
-#body {
+/* #body {
    padding:10px;
    padding-bottom:60px;   /* Height of the footer */
-}
+/*} */
 .footer {
  position: absolute;
   right: 0;
@@ -58,8 +58,8 @@ body {
 }
 
 .body-grad{
-  background: #f6f6f6;
-  background: linear-gradient(to right, #f6f6f6, #c8c9ca);
+  background: #98FB98;
+  background: linear-gradient(to right, #c7ea46 , #D0F0C0);
 }
 /* body {
   background: #007bff;
