--- a/src/app/news-feed-form/news-feed-form.component.html
+++ b/src/app/news-feed-form/news-feed-form.component.html
@@ -1,6 +1,7 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark">
+<!-- <nav class="navbar navbar-expand navbar-dark bg-dark">
     <a class="navbar-brand fa fa-home" style="font-size:48px" [routerLink]="['/dashboard']"></a>
-</nav>
+</nav> -->
+<app-header-control></app-header-control>
 <div class="col-sm-12">
     <div style="margin-left: 30px">
         <input type="radio"  name="viewMode" (change) = "changeView('updatePost')" [checked]='true'> Upload Post
