--- a/src/app/commission-setting/commission-setting.component.html
+++ b/src/app/commission-setting/commission-setting.component.html
@@ -1,36 +1,6 @@
 
 <div class="container-fluid">
-        <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand fa fa-home" style="font-size:48px" [routerLink]="['/dashboard']"></a>
-        </nav> -->
-        <div class="row">
-                <div class="col-6">
-                  <a href="#" class="w3-bar-item w3-button logo-position" routerLink="/dashboard"><img src="assets/logo/Logo.png"
-                      class="logo" style="width: 160px;height: 90px;" alt="Avatar"></a>
-                </div>
-                <div class="col-6">
-                  <div class="w3-card w3-round w3-white w3-center animated flipInX mb-4 api-balance-position">
-                    <!-- Logout -->
-                    <!-- <a class="w3-bar-item w3-button  w3-right w3-hover-white font-large w3-theme-d2 position mobileshow"
-                      title="Logout" (click)="logout()"><i class="fa fa-sign-out pointer"></i></a> -->
-                    <a class="float-right header-item pointer font-large header-item font-size-20 mr-3" title="Logout"
-                      (click)="logout()"><i class="fa fa-sign-out"> Logout</i></a>
-                  </div>
-                  <div class="address float-right mr-5">
-                    <table>
-                      <tr>
-                        <td>Customer Support :</td>
-                        <td>+91-8100101025(10am to 7pm)</td>
-                      </tr>
-                      <tr>
-                        <td>Support E-mail :</td>
-                        <td>support@telecharge.biz(24x7)</td>
-                      </tr>
-                    </table>
-                  </div>
-                </div>
-              </div>
-        <br/><br/>
+        <app-header-control></app-header-control>
         <div class="alert alert-success alert-dismissible" *ngIf="addedSuccessfully && submitted">
                 <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
                 <strong>Your transaction is successful</strong>
