--- a/src/app/view-complaint/view-complaint.component.css
+++ b/src/app/view-complaint/view-complaint.component.css
@@ -80,3 +80,11 @@ display:block; }
     }
     
   }
+  a, label {
+    margin-left: 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 700; 
+  }
+  ul .active {
+    border-bottom: 2px solid #28a745;
+}
