--- a/src/app/view-complaint/view-complaint.component.html
+++ b/src/app/view-complaint/view-complaint.component.html
@@ -1,48 +1,18 @@
 <div class="w3-row marque-position">
-  <!-- <div class="row">
-    <div class="col-6">
-      <a href="#" class="w3-bar-item w3-button logo-position" routerLink="/dashboard"><img src="assets/logo/Logo.png"
-          class="logo" style="width: 160px;height: 90px;" alt="Avatar"></a>
-    </div>
-    <div class="col-6">
-      <div class="w3-card w3-round w3-white w3-center animated flipInX mb-4 api-balance-position"> -->
-        <!-- Logout -->
-        <!-- <a class="w3-bar-item w3-button  w3-right w3-hover-white font-large w3-theme-d2 position mobileshow"
-          title="Logout" (click)="logout()"><i class="fa fa-sign-out pointer"></i></a>
-        <a class="float-right header-item pointer font-large header-item font-size-20" title="Logout"
-          (click)="logout()"><i class="fa fa-sign-out"> Logout</i></a>
-      </div>
-      <div class="address float-right">
-        <table>
-          <tr>
-            <td>Customer Support :</td>
-            <td>+91-8100101025(10am to 7pm)</td>
-          </tr>
-          <tr>
-            <td>Support E-mail :</td>
-            <td>support@telecharge.biz(24x7)</td>
-          </tr>
-        </table>
-      </div>
-    </div>
-  </div> -->
-
-
-
-
+  <app-header-control></app-header-control>
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand fa fa-home" style="font-size:48px" [routerLink]="['/dashboard']"></a>
+    <!-- <a class="navbar-brand fa fa-home" style="font-size:48px" [routerLink]="['/dashboard']"></a> -->
     <button class="navbar-toggler fa fa-home" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <li class="nav-link nav-link pointer">
           <a class="nav-link" [ngClass]="{'nav-item active': userView}"
             (click)='changeView("Complaints")'>Complaints</a>
         </li>
-        <li class="nav-item" *ngIf='loggedInUserRoleID === 4'>
+        <li class="nav-link nav-link pointer" *ngIf='loggedInUserRoleID === 4'>
           <a class="nav-link" [ngClass]="{'nav-item active': !userView}" (click)='changeView("Admin")'>Admin View</a>
         </li>
       </ul>
